Working changes
git-svn-id: http://ns2.paguo.net/svn/repos/trafshow/trunk/backend/snmp-summary-app@516 11230f00-c60a-0410-812f-9e7afa6d8178