@@ -36,13 +36,6 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx512m -XX:MaxPermSize=192m</argLine>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
     <dependencies>
